# Ampel-LSST

./: .copier-answers.yml  .editorconfig  .flake8  .pre-commit-config.yaml  README.md  ampel_config.yml  pyproject.toml  renovate.json
.github/workflows/: main.yml
ampel/abstract/: AbsSNCosmoTabulator.py  AbsT2Tabulator.py  AbsTabulatedT2Unit.py
ampel/lsst/alert/: ElasticcAlertSupplier.py  LSSTAlertSupplier.py  MultiAvroAlertLoader.py
ampel/lsst/alert/load/: ElasticcDirAlertLoader.py  ElasticcTrainingsetLoader.py  HttpSchemaRepository.py  KafkaAlertLoader.py  MultiAvroAlertLoader.py
ampel/lsst/aux/: LSSTDPFilter.py  LSSTFPFilter.py  LSSTObjFilter.py
ampel/lsst/ingest/: FieldSelection.py  LSSTCompilerOptions.py  LSSTDataPointShaper.py  LSSTMongoMuxer.py  LSSTPhotoCombiner.py  LSSTPhotoIngester.py  LSSTPhotoPointShaper.py  LSSTStockIngester.py  LSSTUpperLimitShaper.py
ampel/lsst/kafka/: KafkaConsumer.py  KafkaConsumerBase.py  KafkaProducer.py  KafkaProducerBase.py
ampel/lsst/t0/: ReallySimpleLSSTFilter.py  SimpleLSSTFilter.py
ampel/lsst/t1/: LSSTT1Combiner.py
ampel/lsst/t2/: T2CatalogMatch.py  T2GetAlertId.py  T2GetAlertJournal.py  T2GetDiaObject.py  T2LightCurveFeatures.py
ampel/lsst/t3/complement/: LSSTCutoutImages.py
ampel/lsst/template/: ElasticcAlertConsumerTemplate.py  LSSTAlertConsumerTemplate.py  MultiChannelAlertConsumerTemplate.py
ampel/lsst/util/: LSSTIdMapper.py
ampel/lsst/view/: LSSTSNCosmoTabulator.py  LSSTT2Tabulator.py  ZTFSNCosmoTabulator.py  ZTFT2Tabulator.py
conf/ampel-lsst/: ampel.yml
scripts/: archive_alerts.py
tests/: conftest.py  test_LSSTCutoutImages.py  test_filter.py  test_ingestion.py  test_loader.py  test_loaderv80.py  test_schema_repository.py  test_tabulator.py
tests/test-data/: 11290844.avro  elasticc-consumer.yml  schema_701.avro  testing-config.yaml
