[tool.poetry]
name = "ampel-lsst"
version = "0.8.2-alpha.2"
description = "Legacy Survey of Space and Time support for the Ampel system"
authors = [
    "Marcus Fenner <mf@physik.hu-berlinn.de>",
    "Valery Brinnel",
    "Jakob van Santen <jakob.van.santen@desy.de>",
    "Jakob Nordin",
]
maintainers = [
    "Marcus Fenner <mf@physik.hu-berlinn.de>"
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://ampelproject.github.io"
repository = "https://github.com/AmpelProject/Ampel-LSST"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
packages = [
    {include = "ampel"}
]
include = [
    'conf/*/*.json',
    'conf/*/*/*.json',
    'conf/*/*.yaml',
    'conf/*/*/*.yaml',
    'conf/*/*.yml',
    'conf/*/*/*.yml',
]


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
astropy = "^5.0"
fastavro = "^1.3.2"
light-curve-python = {version = ">=0.2.5,<0.6", optional = true}
sncosmo = {version = ">=2.4.0,<3.0.0", optional = true}
sfdmap = {version = ">=0.1.0,<0.2.0", optional = true}
ampel-interface = [
  {version = ">=0.8.2a7,<0.8.3", allow-prereleases = true, python=">=3.9,<3.10"}]
  #{version = ">=0.8.3a10,<0.8.4", allow-prereleases = true, python=">=3.10,<3.11"}]
ampel-core = [
  {version = ">=0.8.2a9,<0.8.3", allow-prereleases = true, python=">=3.9,<3.10"}]
  #{version = ">=0.8.3a7,<0.8.4", allow-prereleases = true, python=">=3.10,<3.11"}]
ampel-photometry = [
  {version = ">=0.8.2a3,<0.8.3", allow-prereleases = true, python=">=3.9,<3.10"}]
  #{version = ">=0.8.3a1,<0.8.4", allow-prereleases = true, python=">=3.10,<3.11"}]
ampel-alerts = [
  {version = ">=0.8.2a4,<0.8.3", allow-prereleases = true, python=">=3.9,<3.10"}]
  #{version = ">=0.8.3a3,<0.8.4", allow-prereleases = true, python=">=3.10,<3.11"}]
ampel-ztf = [
  {version = ">=0.8.2a1,<0.8.3", allow-prereleases = true, python="<3.10"}]
  #{version = ">=0.8.3a1,<0.8.4", allow-prereleases = true, python=">=3.10"}]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
mongomock = "^3.23.0"
mypy = "^0.931"
pytest-timeout = "^1.4.2"
pytest-asyncio = "^0.15.1"
types-requests = "^2.25.9"
before_after = "^1.0.1"
isort = "^5.10.1"

[tool.poetry.extras]
light-curve = ["light-curve-python"]
sncosmo = ["sncosmo", "sfdmap"]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true

[tool.mypy]
namespace_packages = true
plugins = [
  "pydantic.mypy",
  "numpy.typing.mypy_plugin"
]
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "bson.*",
  "fastavro.*",
  "pymongo.*"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
remove_redundant_aliases = true
combine_as_imports = true
skip_gitignore = true
py_version = "39"
include_trailing_comma = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py39','py310']
